# cpp-cmake-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/cpp-cmake-template/lib_a/: lib_a.h
include/cpp-cmake-template/lib_b/: lib_b.h
include/my_lib/: lib.h
src/: CMakeLists.txt  lib.cpp
src/lib_a/: CMakeLists.txt  lib_a.cpp
src/lib_b/: CMakeLists.txt  lib_b.cpp
src/sub_lib/: CMakeLists.txt  sub_lib.cpp  sub_lib.h
tests/: CMakeLists.txt  test_lib.cpp
